@@ -52,12 +52,3 @@ _Description: Required firmware files may be missing
  reconfigure the package manager to include the contrib and non-free
  sections of the package archive before you can install these
  firmware files.
-
-# This has not yet been reviewed
-Template: linux-image-@abiname@@localversion@/postinst/ignoring-ramdisk
-Type: error
-_Description: Ramdisk configuration must be updated
- Kernel packages will no longer run a specific ramdisk creator.  The
- ramdisk creator package must install a script in
- /etc/kernel/postinst.d, and you should remove the line beginning
- 'ramdisk =' from /etc/kernel-img.conf.
